[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = [
    "rt-multi-thread",
    "macros",
    "io-util",
] }
tokio-util = { version = "0.7.8", features = ["compat"] }
tracing = "0.1.37"
uuid = { version = "1.4.1", features = ["v4"] }
async-ringbuf = "0.1.3"
